# collectible-prediction-sandbox

./: README.md  pyproject.toml  pyrightconfig.json
archive/legacy_collectible_src/: main.py
archive/legacy_collectible_src/data_source/: items.csv
data/raw/bike_sharing/: README.md
docs/: notes.md
docs/assignment/: bike_sharing_model_tuning_assignment.md  collectible_prediction_sandbox_assignment.md
docs/data-science/: chart_interpretation_for_eda.md  classification_evaluation_methods.md  feature_discovery_methods.md  model_types_for_classification.md
docs/knowledge/: temporary_variables.md
docs/observations/: graph_observation_template.md
docs/review/: 20260703_streamlit_graph_review.md
src/: README.md  app.py  generate_sample_data.py
src/data/: events.csv
src/data_source/: README.md  daily_snapshots.csv
